--- a/public/css/list-product.css
+++ b/public/css/list-product.css
@@ -3,35 +3,44 @@ body{
     font-size: 14px;
     font-weight: 400;
     text-align: left;
-
 }
-.car-discount{
+.list-product{
     float: left;
-    width: calc(33.33% - 20px);
+    width: calc(30% - 20px);
     margin: 10px;
     padding: 15px;
+    border-radius: 15px;
 }
-.car-discount i {
+.sort {
+    float: right;
+    margin: 10px;
+    padding: 15px;
+    border-radius: 15px;
+}
+.list-product i {
     color: #dc3545;
 }
 img{
     max-width: 100%;
 
 }
-#car-discount{
+#list{
     text-align: center;
 }
-.car-discount:hover{
+.list-product:hover{
+
     -webkit-transform: translateY(-5px);
     transform: translateY(-5px);
 
 }
+
+
 .thumb{
     overflow: hidden;
     position: relative;
     z-index: 1;
 }
-.car-discount:hover .thumb:before {
+.list-product:hover .thumb:before {
     position: absolute;
     content: '';
     top: 0;
@@ -41,30 +50,30 @@ img{
     background-image: linear-gradient(358deg, #f0151f 8%, #f0151f4d 82%)!important;
     opacity: .5;
 }
-.title-border2{
+.title-border{
     background-color: #dc3545;
 }
-.title-border2{
+.title-border{
     height: 5px;
     width: 94px;
     border-radius: 10px;
     margin: 0 auto;
 }
-.title-border-inner2{
+.title-border-inner{
     height: 5px;
     width: 5px;
     animation: pulse 3s ease infinite alternate, nudge 5s linear infinite alternate;
     float: left;
     margin: 0 2px;
 }
-.title-border2{
+.title-border{
     height: 5px;
     width: 94px;
     border-radius: 10px;
     margin: 0 auto;
 }
 
-.title-border-inner2 {
+.title-border-inner {
     height: 5px;
     width: 5px;
     animation: pulse 3s ease infinite alternate, nudge 5s linear infinite alternate;
