--- a/views/car-discount.ejs
+++ b/views/car-discount.ejs
@@ -11,46 +11,73 @@
         </div>
 
         <div class="car-discount col-md-4">
-            <a href="#"><img src="/demo-list/demo-list.png"/></a>
+            <a href="#">
+                <div class="thumb">
+                    <img src="/demo-list/demo-list.png"/>
+                </div>
+            </a>
             <h4> Tên xe: </h4>
             <p><i class="fa-solid fa-gas-pump"></i> Máy gì:</p>
             <p><i class="fa-solid fa-calendar-days"></i> Năm sản xuất: </p>
             <p><i class="fa-solid fa-dollar-sign"></i> Giá: </p>
+
         </div>
 
         <div class="car-discount col-md-4">
-            <a href="#"><img src="/demo-list/demo-list.png"/></a>
+            <a href="#">
+                <div class="thumb">
+                    <img src="/demo-list/demo-list.png"/>
+                </div>
+            </a>
             <h4> Tên xe: </h4>
             <p><i class="fa-solid fa-gas-pump"></i> Máy gì:</p>
             <p><i class="fa-solid fa-calendar-days"></i> Năm sản xuất: </p>
             <p><i class="fa-solid fa-dollar-sign"></i> Giá: </p>
+
         </div>
 
         <div class="car-discount col-md-4">
-            <a href="#"><img src="/demo-list/demo-list.png"/></a>
+            <a href="#">
+                <div class="thumb">
+                    <img src="/demo-list/demo-list.png"/>
+                </div>
+            </a>
             <h4> Tên xe: </h4>
             <p><i class="fa-solid fa-gas-pump"></i> Máy gì:</p>
             <p><i class="fa-solid fa-calendar-days"></i> Năm sản xuất: </p>
             <p><i class="fa-solid fa-dollar-sign"></i> Giá: </p>
+
         </div>
         <div class="car-discount col-md-4">
-            <a href="#"><img src="/demo-list/demo-list.png"/></a>
+            <a href="#">
+                <div class="thumb">
+                    <img src="/demo-list/demo-list.png"/>
+                </div>
+            </a>
             <h4> Tên xe: </h4>
             <p><i class="fa-solid fa-gas-pump"></i> Máy gì:</p>
             <p><i class="fa-solid fa-calendar-days"></i> Năm sản xuất: </p>
             <p><i class="fa-solid fa-dollar-sign"></i> Giá: </p>
+
         </div>
 
         <div class="car-discount col-md-4">
-            <a href="#"><img src="/demo-list/demo-list.png"/></a>
+            <a href="#">
+                <div class="thumb">
+                    <img src="/demo-list/demo-list.png"/>
+                </div>
+            </a>
             <h4> Tên xe: </h4>
             <p><i class="fa-solid fa-gas-pump"></i> Máy gì:</p>
             <p><i class="fa-solid fa-calendar-days"></i> Năm sản xuất: </p>
             <p><i class="fa-solid fa-dollar-sign"></i> Giá: </p>
         </div>
-
         <div class="car-discount col-md-4">
-            <a href="#"><img src="/demo-list/demo-list.png"/></a>
+            <a href="#">
+                <div class="thumb">
+                    <img src="/demo-list/demo-list.png"/>
+                </div>
+            </a>
             <h4> Tên xe: </h4>
             <p><i class="fa-solid fa-gas-pump"></i> Máy gì:</p>
             <p><i class="fa-solid fa-calendar-days"></i> Năm sản xuất: </p>
