--- a/public/css/best-selling-car-list.css
+++ b/public/css/best-selling-car-list.css
@@ -9,7 +9,6 @@ body{
     width: calc(33.33% - 20px);
     margin: 10px;
     padding: 15px;
-    border-radius: 15px;
 }
 .list-selling-car i {
     color: #dc3545;
@@ -22,11 +21,24 @@ img{
     text-align: center;
 }
 .list-selling-car:hover{
-    box-shadow: 0 5px 5px red;
-    box-sizing: border-box;
     -webkit-transform: translateY(-5px);
     transform: translateY(-5px);
 
+}
+.thumb{
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
+}
+.list-selling-car:hover .thumb:before {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: linear-gradient(358deg, #f0151f 8%, #f0151f4d 82%)!important;
+    opacity: .5;
 }
 .title-border{
     background-color: #dc3545;
