--- a/views/best-selling-car-list.ejs
+++ b/views/best-selling-car-list.ejs
@@ -20,50 +20,79 @@
             </div>
 
             <div class="list-selling-car col-md-4">
-                <a href="#"><img src="/demo-list/demo-list.png"/></a>
-                <h4> Tên xe: </h4>
-                <p><i class="fa-solid fa-gas-pump"></i> Máy gì:</p>
-                <p><i class="fa-solid fa-calendar-days"></i> Năm sản xuất: </p>
-                <p><i class="fa-solid fa-dollar-sign"></i> Giá: </p>
+                <a href="#">
+                <div class="thumb">
+                    <img src="/demo-list/demo-list.png"/>
+                </div>
+                </a>
+                    <h4> Tên xe: </h4>
+                    <p><i class="fa-solid fa-gas-pump"></i> Máy gì:</p>
+                    <p><i class="fa-solid fa-calendar-days"></i> Năm sản xuất: </p>
+                    <p><i class="fa-solid fa-dollar-sign"></i> Giá: </p>
+
             </div>
 
             <div class="list-selling-car col-md-4">
-                <a href="#"><img src="/demo-list/demo-list.png"/></a>
+                <a href="#">
+                    <div class="thumb">
+                        <img src="/demo-list/demo-list.png"/>
+                    </div>
+                </a>
                 <h4> Tên xe: </h4>
                 <p><i class="fa-solid fa-gas-pump"></i> Máy gì:</p>
                 <p><i class="fa-solid fa-calendar-days"></i> Năm sản xuất: </p>
                 <p><i class="fa-solid fa-dollar-sign"></i> Giá: </p>
+
             </div>
 
             <div class="list-selling-car col-md-4">
-                <a href="#"><img src="/demo-list/demo-list.png"/></a>
+                <a href="#">
+                    <div class="thumb">
+                        <img src="/demo-list/demo-list.png"/>
+                    </div>
+                </a>
                 <h4> Tên xe: </h4>
                 <p><i class="fa-solid fa-gas-pump"></i> Máy gì:</p>
                 <p><i class="fa-solid fa-calendar-days"></i> Năm sản xuất: </p>
                 <p><i class="fa-solid fa-dollar-sign"></i> Giá: </p>
-            </div>
-            <div class="list-selling-car col-md-4">
-                <a href="#"><img src="/demo-list/demo-list.png"/></a>
-                <h4> Tên xe: </h4>
-                <p><i class="fa-solid fa-gas-pump"></i> Máy gì:</p>
-                <p><i class="fa-solid fa-calendar-days"></i> Năm sản xuất: </p>
-                <p><i class="fa-solid fa-dollar-sign"></i> Giá: </p>
+
             </div>
 
             <div class="list-selling-car col-md-4">
-                <a href="#"><img src="/demo-list/demo-list.png"/></a>
+                <a href="#">
+                    <div class="thumb">
+                        <img src="/demo-list/demo-list.png"/>
+                    </div>
+                </a>
                 <h4> Tên xe: </h4>
                 <p><i class="fa-solid fa-gas-pump"></i> Máy gì:</p>
                 <p><i class="fa-solid fa-calendar-days"></i> Năm sản xuất: </p>
                 <p><i class="fa-solid fa-dollar-sign"></i> Giá: </p>
-            </div>
 
+            </div>
             <div class="list-selling-car col-md-4">
-                <a href="#"><img src="/demo-list/demo-list.png"/></a>
+                <a href="#">
+                    <div class="thumb">
+                        <img src="/demo-list/demo-list.png"/>
+                    </div>
+                </a>
                 <h4> Tên xe: </h4>
                 <p><i class="fa-solid fa-gas-pump"></i> Máy gì:</p>
                 <p><i class="fa-solid fa-calendar-days"></i> Năm sản xuất: </p>
                 <p><i class="fa-solid fa-dollar-sign"></i> Giá: </p>
+
+            </div>
+            <div class="list-selling-car col-md-4">
+                <a href="#">
+                    <div class="thumb">
+                        <img src="/demo-list/demo-list.png"/>
+                    </div>
+                </a>
+                <h4> Tên xe: </h4>
+                <p><i class="fa-solid fa-gas-pump"></i> Máy gì:</p>
+                <p><i class="fa-solid fa-calendar-days"></i> Năm sản xuất: </p>
+                <p><i class="fa-solid fa-dollar-sign"></i> Giá: </p>
+
             </div>
         </div>
     </div>
