--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -16,7 +16,7 @@
             <div class="menu-dropdown">
 
                 <ul class="menu-item-wrapper dropdown" id="car-line">
-                    <li><a href="#">Mercedes</a></li>
+                    <li><a href="/list-product">Mercedes</a></li>
                     <li><a href="#">BMW</a></li>
                     <li><a href="#">Toyota</a></li>
                     <li><a href="#">Hyundai</a></li>
