--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -16,11 +16,10 @@
             <div class="menu-dropdown">
 
                 <ul class="menu-item-wrapper dropdown" id="car-line">
-                    <li><a href="/list-product">Mercedes</a></li>
-                    <li><a href="#">BMW</a></li>
-                    <li><a href="#">Toyota</a></li>
-                    <li><a href="#">Hyundai</a></li>
-                    <li><a href="#">Kia</a></li>
+                    <%for(var i=0;i<brandList.length;i++){%>
+                    <li><a href="/list-product?BrName=<%= brandList[i].BrName%>"><%= brandList[i].BrName%></a></li>
+                    <%}%>
+
                 </ul>
                 <ul class="menu-item-wrapper dropdown" id="car-buying-advice">
                     <li><a href="#">Sign up for a test drive</a></li>
