--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -9,7 +9,7 @@
                                 <ul>
                                         <p>USEFUL LINKS</p>
                                         <li><a href="/">Home</a></li>
-                                        <li><a href="#">About US</a></li>
+                                        <li><a href="/aboutus">About US</a></li>
                                         <li><a href="#">Services</a></li>
                                         <li><a href="#">Contact US</a></li>
 
