--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -33,8 +33,8 @@
                     <li><a href="#">Accessary</a></li>
                 </ul>
                 <ul class="menu-item-wrapper dropdown" id="car-world">
-                    <li><a href="#">Creation</a></li>
-                    <li><a href="#">Design and ideas</a></li>
+                    <li><a href="/creation">Creation</a></li>
+                    <li><a href="/design">Design and ideas</a></li>
                     <li><a href="#">Develop</a></li>
                 </ul>
 
