--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,11 +5,15 @@
                         <a href="/"><h3>CARRIO MOTOS</h3></a>
                 </div>
 
-                <div class="col-md-9">
+                <div class="col-md-4">
                         <div class="box">
                                 <div class="container-1">
-                                        <span class="icon"><i class="fa fa-search"></i></span>
-                                        <input type="search" id="search" placeholder="Search..." />
+                                        <form action="/search" method="get">
+
+                                        <input name="search" type="search" id="search" placeholder="Search..." />
+                                                <button type="submit"><span class="icon"><i class="fa fa-search"></i></span></button>
+                                        </form>
+
                                 </div>
                         </div>
                 </div>
