--- a/public/css/aboutus.css
+++ b/public/css/aboutus.css
@@ -1,6 +1,24 @@
 .text{
     padding-left: 50px;
 }
+.last{
+    padding-bottom: 100px;
+}
+.welcome{
+    padding-top: 100px;
+    padding-left: 50px;
+}
 .thanhtich{
-    padding-bottom: 50px;
+    padding-left: 50px;
+}
+.ul{
+    background-color: #e2e5e5;
+    margin-top: 15px;
+    margin-bottom: 20px;
+}
+#1{
+    color: #ed1c24;
+}
+.2{
+
 }
