--- a/views/design.ejs
+++ b/views/design.ejs
@@ -67,7 +67,7 @@
                                         all brands of the Group. As a result, the designers create all touchpoints where a customer comes into
                                         contact with the company, while at the same time creating an overall experience.
                                    </p>
-                                   <a href="#">More about the Vision EQXX</a>
+                                   <a href="#">More About Design Insight.</a>
                               </div>
                          </div>
                          <div class="col-md-6">
@@ -117,7 +117,7 @@
                                    design studios are creative spaces where the designers can let their
                                    thoughts roam freely without thinking of a series production right away.
                               </p>
-                              <a href="#">More about the Vision EQXX</a>
+                              <a href="#">More about the Advanced Design Studios</a>
                          </div>
                     </div>
                </div>
@@ -161,24 +161,17 @@
                <div class="row">
                     <div class="imgmain1">
                          <div class="col-md-6">
-                              <img src="/imgcarworld/imgmain1.jpg">
+                              <img src="/imgcarworld/design7.jpeg">
                          </div>
                     </div>
                     <div class="col-md-6">
-                         <div class="textmain1">
-                              <h2><b>Mercedes-Benz VISION EQXX - Leading the way. For over 1,000 kilometres.</b></h2>
+                         <div class="textmain4">
                               <p>
-                                   Mercedes-Benz is setting new standards for electric range and efficiency
-                                   with the VISION EQXX. The prototype demonstrates just how efficient,
-                                   sustainable and luxurious electromobility can be. This champion of efficiency
-                                   has a range of more than 1,000 kilometres on a single battery charge, which equates
-                                   to consumption of less than 10 kWh of energy per 100 kilometres. This is due in part
-                                   to the exterior design and aerodynamics, which achieve a benchmark drag coefficient
-                                   of 0.17. The irresistible bodywork takes the revolution further: the VISION EQXX
-                                   demonstrates precisely what will make an electric vehicle a Mercedes-Benz in the
-                                   future, with lightweight design, battery innovations and new materials.
+                                   Another task of the studio is identifying trends and transferring stimuli from the American automotive world, because it differs in part from that of Europe.
                               </p>
-                              <a href="#">More about the Vision EQXX</a>
+                              <p>
+                                   However, the one-of-a-kind Mercedes-Benz design philosophy of Sensual Purity is recognisable in all projects. In this process, Carlsbad works closely with the other advanced design studios.</p>
+                              </p>
                          </div>
                     </div>
                </div>
