--- a/public/css/design.css
+++ b/public/css/design.css
@@ -7,7 +7,7 @@
 .vision{
     padding-top: 100px;
     padding-left: 100px;
-    padding-bottom: 200px;
+    padding-bottom: 100px;
 }
 .inlight{
     padding-top: 100px;
@@ -23,7 +23,7 @@
 }
 #img1{
     padding-left: 100px;
-    padding-bottom: 100px;
+    padding-bottom: 30px;
 }
 .button{
     padding-top: 50px;
@@ -48,4 +48,7 @@
     padding-top: 100px;
     padding-left: 100px;
     padding-bottom: 25px;
+}
+.main-5{
+    padding-bottom: 50px;
 }
