--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -34,7 +34,7 @@
                 <ul class="menu-item-wrapper dropdown" id="car-world">
                     <li><a href="/creation">Creation</a></li>
                     <li><a href="/design">Design and ideas</a></li>
-                    <li><a href="#">Develop</a></li>
+                    <li><a href="/develop">Develop</a></li>
                 </ul>
 
             </div>
