--- a/views/header.ejs
+++ b/views/header.ejs
@@ -10,8 +10,9 @@
                                 <div class="container-1">
                                         <form action="/search" method="get">
 
+                                                        <span class="icon"><i class="fa fa-search"></i></span>
                                         <input name="search" type="search" id="search" placeholder="Search..." />
-                                                <button type="submit"><span class="icon"><i class="fa fa-search"></i></span></button>
+                                                <button type="submit">  </button>
                                         </form>
 
                                 </div>
