--- a/views/list-product.ejs
+++ b/views/list-product.ejs
@@ -24,22 +24,19 @@
                     <div class="title-border-inner"></div>
                     <div class="title-border-inner"></div>
                 </div>
-
                 <% for (var i = 0; i < listProduct.length;i++){%>
-
                     <div class="col-md-3.5 list-product">
                      <a href="#">
                          <div class="thumb">
                              <img src="/demo-list/demo-list.png"/>
                          </div>
                      </a>
-                    <h4> <%= listProduct[i].Name%></h4>
+                    <h4> <%= brnameList.BrName%> <%= listProduct[i].Name%></h4>
                     <p><i class="fa-solid fa-dollar-sign"></i> <%= listProduct[i].Price%> </p>
                         <p><%=bodyList[i].BodyStyle%></p>
                         <p><%=fuelList[i].Fueltype%></p>
                      </div>
                 <%}%>
-
                 <div class="col-md-1.5 sort">
                      <form>
                          <select name="thanhpho">
