--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -2,7 +2,7 @@ footer{
 
     color: #eeeeee;
     font-size: 20px;
-    background-image: url("../imgcarworld/bg_ft.jpg");
+    background-image: url("../carworld/bg_ft.jpg");
 }
 footer li a {
     color: #eeeeee;
