--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -84,7 +84,7 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <img src="/imgcarworld/room1.jpg">
+                            <img src="/carworld/room1.jpg">
                         </div>
                     </div>
                 </div>
@@ -102,7 +102,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <img src="/imgcarworld/room2.jpg">
+                    <img src="/carworld/room2.jpg">
                 </div>
                 <div class="col-md-6">
                     <div class="text">
@@ -135,7 +135,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <img src="/imgcarworld/room3.jpg">
+                    <img src="/carworld/room3.jpg">
                 </div>
             </div>
         </div>
