--- a/views/creation.ejs
+++ b/views/creation.ejs
@@ -10,12 +10,12 @@
 <%- include("header.ejs") %>
 <%- include("nav.ejs") %>
 <div  class="main">
-    <img src="../imgcarworld/bmw.jpg" >
+    <img src="../carworld/bmw.jpg" >
 </div>
 <div class="content">
     <div class="car-left">
         <div class="imag">
-            <img src="../imgcarworld/audi.jpg" >
+            <img src="../carworld/audi.jpg" >
         </div>
         <div class="textcar">
             <h2> Audi </h2>
@@ -29,7 +29,7 @@
     </div>
     <div class="car">
         <div class="imag">
-            <img src="../imgcarworld/volvo.jpg" >
+            <img src="../carworld/volvo.jpg" >
         </div>
         <div class="texcar">
             <h2> Volvo </h2>
@@ -42,7 +42,7 @@
     </div>
     <div class="car-left">
         <div class="imag">
-            <img src="../imgcarworld/merc.jpg" >
+            <img src="../carworld/merc.jpg" >
         </div>
         <div class="textcar">
             <h2>Mercsedec</h2>
@@ -56,7 +56,7 @@
     </div>
     <div class="car">
         <div class="imag">
-            <img src="../imgcarworld/merc.jpg" >
+            <img src="../carworld/merc.jpg" >
         </div>
         <div class="textcar">
             <h2>Mercsedec</h2>
