--- a/views/design.ejs
+++ b/views/design.ejs
@@ -10,7 +10,7 @@
 <body>
 <%- include("header.ejs") %>
 <%- include("nav.ejs") %>
-     <img id="main" src="/imgcarworld/design1.jpeg" >
+     <img id="main" src="/carworld/design1.jpeg" >
      <div class="vision">
          <h3> <u> VISION EQXX </u></h3>
           <h2>VISION EQXX: The new benchmark of efficiency</h2>
@@ -21,7 +21,7 @@
                     <div class="row">
                          <div class="imgmain1">
                               <div class="col-md-6">
-                                   <img src="/imgcarworld/imgmain1.jpg">
+                                   <img src="/carworld/imgmain1.jpg">
                               </div>
                          </div>
                          <div class="col-md-6">
@@ -71,26 +71,26 @@
                               </div>
                          </div>
                          <div class="col-md-6">
-                              <img src="/imgcarworld/design2.jpeg">
+                              <img src="/carworld/design2.jpeg">
                          </div>
                     </div>
                </div>
           </div>
      </div>
-     <img id="img1" src="/imgcarworld/design3.jpg">
+     <img id="img1" src="/carworld/design3.jpg">
      <div class="inlight">
           <h3> <u> Advanced Design Studios   </u></h3>
           <h2>Advanced Design Studios.</h2>
           <h4>A dialogue with the future.</h4>
      </div>
-<img id="imgmain3" src="/imgcarworld/design4.jpeg">
+<img id="imgmain3" src="/carworld/design4.jpeg">
 <div class="main-3">
      <div class="page-section half-bg-col">
           <div class="container">
                <div class="row">
                     <div class="imgmain1">
                          <div class="col-md-6">
-                              <img src="/imgcarworld/design5.jpg">
+                              <img src="/carworld/design5.jpg">
                          </div>
                          <p id="text3">
                               Day in, day out, the designers of the Daimler Design unit
@@ -149,7 +149,7 @@
                          </div>
                     </div>
                     <div class="col-md-6">
-                         <img src="/imgcarworld/design6.jpeg">
+                         <img src="/carworld/design6.jpeg">
                     </div>
                </div>
           </div>
@@ -161,7 +161,7 @@
                <div class="row">
                     <div class="imgmain1">
                          <div class="col-md-6">
-                              <img src="/imgcarworld/design7.jpeg">
+                              <img src="/carworld/design7.jpeg">
                          </div>
                     </div>
                     <div class="col-md-6">
