--- a/views/develop.ejs
+++ b/views/develop.ejs
@@ -11,7 +11,7 @@
 <%- include("header.ejs") %>
 <%- include("nav.ejs") %>
 <h1> Develop </h1>
-<img src="/imgcarworld/deve1.jpg">
+<img src="/carworld/deve1.jpg">
 <div class="road">
     <h3>
         <u>
@@ -31,7 +31,7 @@
             <div class="row">
                 <div class="imgmain1">
                     <div class="col-md-6">
-                        <img src="/imgcarworld/deve2.jpeg">
+                        <img src="/carworld/deve2.jpeg">
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -64,7 +64,7 @@
                         </div>                    </div>
                 </div>
                 <div class="col-md-6">
-                    <img src="/imgcarworld/devel33.jpg">
+                    <img src="/carworld/devel33.jpg">
                 </div>
             </div>
         </div>
