--- a/views/best-selling-car-list.ejs
+++ b/views/best-selling-car-list.ejs
@@ -27,10 +27,10 @@
                         <img src="/demo-list/demo-list.png"/>
                     </div>
                 </a>
-                <h4> Tên xe:<%=bestList[i].Name%> </h4>
-                <p><i class="fa-solid fa-gas-pump"></i> Máy:<%=bestList[i].Fueltype%></p>
-                <p><i class="fa-solid fa-calendar-days"></i> Năm sản xuất: <%=bestList[i].Year%></p>
-                <p><i class="fa-solid fa-dollar-sign"></i> Giá:<%=bestList[i].Price%> </p>
+                <h4> <%=bestList[i].Name%> </h4>
+                <p><i class="fa-solid fa-gas-pump"></i> <%=bestList[i].Fueltype%></p>
+                <p><i class="fa-solid fa-calendar-days"></i> <%=bestList[i].Year%></p>
+                <p><i class="fa-solid fa-dollar-sign"></i> <%=bestList[i].Price%> </p>
 
             </div>
                 <%}%>
