--- a/views/list-product.ejs
+++ b/views/list-product.ejs
@@ -33,8 +33,8 @@
                      </a>
                     <h4> <%= brnameList.BrName%> <%= listProduct[i].Name%></h4>
                     <p><i class="fa-solid fa-dollar-sign"></i> <%= listProduct[i].Price%> </p>
-                        <p><%=bodyList[i].BodyStyle%></p>
-                        <p><%=fuelList[i].Fueltype%></p>
+                        <p><i class="fa-solid fa-car"></i> <%=bodyList[i].BodyStyle%></p>
+                        <p><i class="fa-solid fa-gas-pump"></i> <%=fuelList[i].Fueltype%></p>
                      </div>
                 <%}%>
                 <div class="col-md-1.5 sort">
