--- a/views/product.ejs
+++ b/views/product.ejs
@@ -33,8 +33,8 @@
                 </a>
                 <h4> <%= carList[i].BrName%> <%= carList[i].Name%></h4>
                 <p><i class="fa-solid fa-dollar-sign"></i> <%= carList[i].Price%> </p>
-                <p><%=carList[i].BodyStyle%></p>
-                <p><%=carList[i].Fueltype%></p>
+                <p><i class="fa-solid fa-car"></i>  <%=carList[i].BodyStyle%></p>
+                <p><i class="fa-solid fa-gas-pump"></i>  <%=carList[i].Fueltype%></p>
             </div>
         <%}%>
         <div class="col-md-1.5 sort">
