--- a/views/search.ejs
+++ b/views/search.ejs
@@ -35,8 +35,8 @@
                 </a>
                 <h4> <%= searchList[i].Name%></h4>
                 <p><i class="fa-solid fa-dollar-sign"></i> <%= searchList[i].Price%> </p>
-                <p><%=searchList[i].BodyStyle%></p>
-                <p><%=searchList[i].Fueltype%></p>
+                <p><i class="fa-solid fa-car"></i> <%=searchList[i].BodyStyle%></p>
+                <p><i class="fa-solid fa-gas-pump"></i> <%=searchList[i].Fueltype%></p>
             </div>
         <%}%>
 
