--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,18 +1,19 @@
+
+
 <link rel="stylesheet" href="/css/header.css">
-<div class="section container hea-der">
+<div class="full-screen-preview hea-der">
         <div class="row">
                 <div class="col-md-3 lo-go">
-                        <a href="/"><img src="/logo/img.png"></a>
+                        <a href="/"><h3>CARRIO MOTOS</h3></a>
                 </div>
 
                 <div class="col-md-9">
                         <div class="box">
                                 <div class="container-1">
                                         <form action="/search" method="get">
+                                                <span><button type="submit" class="icon"></button></span>
+                                                <input name="search" type="search" id="search" placeholder="Search..." />
 
-                                                        <span class="icon"><i class="fa fa-search"></i></span>
-                                        <input name="search" type="search" id="search" placeholder="Search..." />
-                                                <button type="submit">  </button>
                                         </form>
 
                                 </div>
