--- a/public/css/megamenu.css
+++ b/public/css/megamenu.css
@@ -186,7 +186,7 @@ li {
   padding-bottom: 0;
 }
 .mega-menu .menu-dropdown .menu-item-wrapper li a:hover {
-  color: black;
+  color: #dc3545;
 }
 .mega-menu .menu-dropdown .menu-item-wrapper li ul {
   padding: 0;
@@ -195,13 +195,13 @@ li {
   background-color: white;
   float: left;
   width: auto;
-  padding: 25px;
+  padding: 15px;
   position: absolute;
   box-shadow: 0px 1px 4px #dadada;
 }
 .mega-menu .menu-dropdown .menu-item-wrapper.dropdown.active {
   display: block;
-  top: 55px;
+  top: 30px;
 }
 .mega-menu .menu-dropdown .menu-item-wrapper.dropdown li {
   margin-right: 0;
