--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -80,7 +80,7 @@
                                 <p>Vestibulum iaculis lacinia est. Proin dictum elementum velit. Fusce euismod consequat ante. Lorem ipsum dolor sit amet, consectetuer adipisMauris accumsan nulla vel diam. Sed in lacus ut enim adipiscing aliquet. Nulla venenatis. </p>
                                 <p class="text-size-medium"><b>Aliquam dapibus tincidunt metus. Praesent justo dolor, lobortis quis, lobortis dignissim, pulvinar ac, lorem. </b></p>
                                 <p>Vestibulum sed ante. Donec sagittis euismod purus.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis.</p>
-                                <a href="#" class="info-btn">Schedule a Service Appointment</a>
+                                <a href="#">Schedule a Service Appointment</a>
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -110,7 +110,7 @@
                         <p>Vestibulum iaculis lacinia est. Proin dictum elementum velit. Fusce euismod consequat ante. Lorem ipsum dolor sit amet, consectetuer adipisMauris accumsan nulla vel diam. Sed in lacus ut enim adipiscing aliquet. Nulla venenatis. </p>
                         <p class="text-size-medium"><b>Aliquam dapibus tincidunt metus. Praesent justo dolor, lobortis quis, lobortis dignissim, pulvinar ac, lorem. </b></p>
                         <p>Vestibulum sed ante. Donec sagittis euismod purus.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis.</p>
-                        <a href="#" class="info-btn">Read More</a>
+                        <a href="#">Read More</a>
                     </div>
                 </div>
             </div>
@@ -131,7 +131,7 @@
                         <p>Vestibulum iaculis lacinia est. Proin dictum elementum velit. Fusce euismod consequat ante. Lorem ipsum dolor sit amet, consectetuer adipisMauris accumsan nulla vel diam. Sed in lacus ut enim adipiscing aliquet. Nulla venenatis. </p>
                         <p class="text-size-medium"><b>Aliquam dapibus tincidunt metus. Praesent justo dolor, lobortis quis, lobortis dignissim, pulvinar ac, lorem. </b></p>
                         <p>Vestibulum sed ante. Donec sagittis euismod purus.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis.</p>
-                        <a href="#" class="info-btn">Read More</a>
+                        <a href="#">Read More</a>
                     </div>
                 </div>
                 <div class="col-md-6">
