--- a/views/search.ejs
+++ b/views/search.ejs
@@ -33,7 +33,7 @@
                         <img src="/demo-list/demo-list.png"/>
                     </div>
                 </a>
-                <h4> <%= searchList[i].Name%></h4>
+                <h4><%=searchList[i].BrName%> <%= searchList[i].Name%></h4>
                 <p><i class="fa-solid fa-dollar-sign"></i> <%= searchList[i].Price%> </p>
                 <p><i class="fa-solid fa-car"></i> <%=searchList[i].BodyStyle%></p>
                 <p><i class="fa-solid fa-gas-pump"></i> <%=searchList[i].Fueltype%></p>
