--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -15,7 +15,7 @@
             </div>
             <div class="menu-dropdown">
                 <ul class="menu-item-wrapper dropdown" id="car-line">
-                    <li><a href="/product">All</a></li>
+                    <li><a href="/product">All Car</a></li>
                     <%for(var i=0;i<brandList.length;i++){%>
                     <li><a href="/list-product?BrName=<%= brandList[i].BrName%>"><%= brandList[i].BrName%></a></li>
                     <%}%>
